[package]
name = "walpurgis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
player-slint = { path = "../player-slint" }
constants = { path = "../constants" }
cartridge-debug = { path = "../cartridge-debug" }
