[package]
name = "player-slint"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "0.2.4"
constants = { path = "../constants" }
cartridge = { path = "../cartridge" }
cartridge-debug = { path = "../cartridge-debug" }

[build-dependencies]
slint-build = "0.2.4"
