[package]
name = "player-slint"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "0.2.5"
cartridge = { path = "../cartridge" }
tileset = { path = "../tileset" }
cartridge-debug = { path = "../cartridge-debug" }
tileset-debug = { path = "../tileset-debug" }

[build-dependencies]
slint-build = "0.2.4"
